chore: test and api fixes
